Fix T64137 Empty Images flickering graphics when "Auto Depth" is enabled

Also fix T64373 Grid intensity increases in Ortographic when use Circle
Select in GPencil Edit mode